--- a/src/sass/_carousel.scss
+++ b/src/sass/_carousel.scss
@@ -57,6 +57,7 @@
         transform: rotate(-7deg);
         top: 22px;
         left: -20px;
+        transition: color 0.5s;
     }
 
     &.slider__slide--note {
@@ -79,6 +80,12 @@
             @include fontelloContent('\e804');
         }
     }
+
+    &:hover {
+        &::before {
+            color: $focus;
+        }
+    }
 }
 
 .slider__indicators {
@@ -94,10 +101,13 @@
     vertical-align: top;
     border-radius: 50%;
     transition: background-color $animation-duration;
-    
 
     &.slider__indicator--active {
         background-color: $white;
+    }
+
+    & + .slider__indicator {
+        margin-left: 5px;
     }
 }
 
