--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -3,6 +3,7 @@
 }
 
 html {
+    font-size: 13px;
     font-family: $font;
     color: $plain-text-color;
     line-height: 1.7;
@@ -37,3 +38,8 @@ img {
     max-width: 100%;
 }
  
+@media (min-width: $screen-sm-min) {
+    html {
+        font-size: 16px;
+    }
+}
